tests/snapshots/serde__de_resizable_arraybuffer_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew ArrayBuffer(2, { maxByteLength: 10 })"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
        ],
        max_byte_length: Some(
            10,
        ),
    },
}

