tests/snapshots/serde__de_set_circular_self.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst s = new Set(); s.add(s); s"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Set {
        HeapReference(
            *0,
        ),
    },
}

