tests/snapshots/serde__de_set_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Set()"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Set {},
}

