tests/snapshots/serde__de_sparse_array_circular_self.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst arr = new Array(2); arr[0] = arr; arr"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: SparseArray(2) {
        0: HeapReference(
            *0,
        ),
    },
}

