tests/snapshots/serde__de_sparse_array_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Array(0)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: SparseArray(0) {},
}

