tests/snapshots/serde__de_sparse_array_one_element_length_two.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n\nconst arr = new Array(2);\narr[1] = 1;\narr\n"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: SparseArray(2) {
        1: I32(
            1,
        ),
    },
}

